latest code changes

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 <script src="app/lib/angular.js"></script>
 <script src="app/lib/angular-bootstrap.js"></script>
 <script src="app/lib/ng-google-chart.js"></script>
-
+<script src="app/lib/cookies.js"></script>
 <script src="app/controller/mainController.js"></script>
 <script src="app/controller/modalControllers.js"></script> 
 <script src="app/lib/bootstrap-dialog.js"></script>
